--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ margin-top: -30px;
   <header>
     <div class="logo">
         <a href="">
-          <img src="assets/logo.svg" alt="LiceFont Logo">
+          <img src="logo.svg" alt="LiceFont Logo">
         </a>
       </div>
     <nav class="nav">
